Restructured UI scripting, started on index page gallery

--- a/src/account/style.scss
+++ b/src/account/style.scss
@@ -1,6 +1,6 @@
-@import 'vars';
+@import '../vars';
 
-.masks__content {
+.account__content {
   h1 {
     font-size: 42px;
     text-align: center;
