--- a/src/garments/style.scss
+++ b/src/garments/style.scss
@@ -1,6 +1,6 @@
-@import 'vars';
+@import '../vars';
 
-.about__content {
+.garments__content {
   h1 {
     font-size: 42px;
     text-align: center;
