--- a/src/masks/style.scss
+++ b/src/masks/style.scss
@@ -1,6 +1,6 @@
-@import 'vars';
+@import '../vars';
 
-.account__content {
+.masks__content {
   h1 {
     font-size: 42px;
     text-align: center;
