--- a/src/about/style.scss
+++ b/src/about/style.scss
@@ -1,6 +1,6 @@
-@import 'vars';
+@import '../vars';
 
-.garments__content {
+.about__content {
   h1 {
     font-size: 42px;
     text-align: center;
