--- a/src/home/style.scss
+++ b/src/home/style.scss
@@ -8,7 +8,6 @@
 @mixin gallery_image {
   @include gallery_size;
   background-repeat: no-repeat;
-  position: relative;
 }
 
 .home__content {
@@ -37,17 +36,17 @@
   }
 
   .home__introduction {
-    background-color: $white-t33;
+    background-color: $black-t66;
     border: 1px solid $silver;
-    border-radius: 5px;
+    border-radius: 12px;
+    font-size: 20px;
     margin: 20px auto;
-    min-height: 400px;
-    padding: 10px;
+    padding: 0 25px;
     width: 600px;
   }
 
   .gallery {
-    margin: 0 auto;
+    margin: 0 auto 50px;
     @include gallery_size;
 
     .gallery__spikes {
@@ -56,16 +55,22 @@
       background-position: 50px 50px;
     }
 
+    .gallery__steampunk {
+      @include gallery_image;
+      background-image: url(/images/steampunk_mask.png);
+      background-position: 300px 400px;
+    }
+
+    .gallery__bloodfeather {
+      @include gallery_image;
+      background-image: url(/images/bloodfeather.png);
+      background-position: 50px 400px;
+    }
+
     .gallery__purple_rain {
       @include gallery_image;
       background-image: url(/images/purple_rain.png);
-      background-position: 75px 400px;
-    }
-
-    .gallery__mask_back {
-      @include gallery_image;
-      background-image: url(/images/mask_back.png);
-      background-position: 400px 400px;
+      background-position: 550px 0;
     }
   }
 }
