--- a/src/masks/style.scss
+++ b/src/masks/style.scss
@@ -6,4 +6,10 @@
     text-align: center;
     font-family: $title-font;
   }
+
+  h2 {
+    color: $fire;
+    font-size: 24px;
+    text-align: center;
+  }
 }
