--- a/src/vars.scss
+++ b/src/vars.scss
@@ -6,6 +6,7 @@ $iron: #525355;
 $coal: #1e1e20;
 $gold: #eeb93e;
 $white-t33: rgba(255, 255, 255, 0.33);
+$black-t66: rgba(5, 5, 6, 0.66);
 
 // Theme Fonts
 $plain: 'Philosopher', sans-serif;
