--- a/src/vars.scss
+++ b/src/vars.scss
@@ -4,6 +4,8 @@ $silver: #ebedf3;
 $steel: #a2a3a7;
 $iron: #525355;
 $coal: #1e1e20;
+$soot: #0b0c0f;
+$shadow: #000;
 $gold: #eeb93e;
 $white-t33: rgba(255, 255, 255, 0.33);
 $black-t66: rgba(5, 5, 6, 0.66);
